--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,32 @@ doctype html
 html
   head
     title= title
+
+    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+
   body
-    block content
+
+    nav(class='navbar navbar-inverse navbar-fixed-top')
+      div(class='container')
+        div(class='navbar-header')
+          button(type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar")
+            span(class="sr-only") Toggle navigation
+            span(class="icon-bar")
+            span(class="icon-bar")
+            span(class="icon-bar")
+          a(class="navbar-brand" href="/") Blog
+        div(id="navbar" class="collapse navbar-collapse")
+          ul(class="nav navbar-nav")
+            li(class="active")
+              a(href="/") Home
+            li
+              a(href="/sobre") Sobre
+            li
+              a(href="/contato") Contato
+    div(class="container")
+      block content
+
+    script(src='/javascripts/jquery.min.js')
+    script(src='/javascripts/bootstrap.min.js')
+    script(src='/javascripts/style.js')
