adcionado salvar contatos

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,6 +26,8 @@ html
               a(href="/sobre") Sobre
             li
               a(href="/contato") Contato
+            li
+              a(href="/usuario") Usuarios
     div(class="container")
       block content
 
